# error-handling-rs

./: .gitattributes  AGENTS.md  AGENTS.ts  CHANGELOG.md  Cargo.toml  DOCS.md  NOTES.md  README.md  README.ts  lefthook.yml  mise.toml
.agents/: documentation.md  knowledge.md
.agents/doc/: auto-deref.md
.github/workflows/: ci.yml
internal/: AGENTS.md  design.md
internal/design/: general.md  naming.md
specs/: fix-writeln-error.md  plan-multiple-sources.md
specs/contexts/: multiple-sources.md
src/: drafts.rs  functions.rs  lib.rs  macros.rs  main.rs  traits.rs  types.rs
src/drafts/: err_vec_display.rs
src/drafts/err_vec_display/fixtures/: must_err_vec_display.txt
src/functions/: eprintln_error.rs  exit_result.rs  fmt.rs  get_root_error.rs  output_error.rs  partition_result.rs  write_error.rs  write_to_named_temp_file.rs  writeln_error.rs
src/functions/write_error/: must_write_error.txt
src/functions/writeln_error/fixtures/: must_write_error.txt  must_write_nested_error.txt
src/traits/: errgonomic.rs  render.rs
src/types/: debug_as_display.rs  display_as_debug.rs  display_debug_pair.rs  err_vec.rs  error_displayer.rs  item_error.rs  path_buf_display.rs  prefixer.rs
tasks/: my-plan-multiple-sources.md  printing-errors-with-multiple-sources.md
tasks/contexts/: multiple-sources.md
