[package]
name = "errgonomic"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Macros for ergonomic error handling with thiserror"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/errgonomic"
repository = "https://github.com/DenisGorbachev/errgonomic"
readme = "README.md"
keywords = ["error-handling", "utils", "macros"]
categories = ["rust-patterns", "development-tools", "development-tools::debugging"]

[package.metadata.details]
title = "Errgonomic"
tagline = ""
summary = ""
announcement = ""
readme = { generate = true }

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
tempfile = "3"
thiserror = "2"

[dev-dependencies]
futures = "0.3.31"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.39.2", features = ["macros", "fs", "net", "rt", "rt-multi-thread"] }
toml = "0.9.5"
