[package]
name = "errgonomic"
version = "0.5.0"
edition = "2024"
rust-version = "1.85.0"
description = "Macros for ergonomic error handling with thiserror"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/errgonomic"
repository = "https://github.com/DenisGorbachev/errgonomic"
readme = "README.md"
keywords = ["error-handling", "utils", "macros"]
categories = ["rust-patterns", "development-tools", "development-tools::debugging", "no-std"]
exclude = [
    ".*",
    "*.local.*",
    "doc/dev",
    "specs",
    "README.ts",
    "AGENTS*.md",
    "CLAUDE*.md",
    "deno.json",
    "commitlint.config.mjs",
    "lefthook.yml",
    "mise.toml",
    "rumdl.toml",
    "rustfmt.toml",
    "yolobox"
]
# "internal" dir should be included

[package.metadata.details]
title = "Errgonomic"
tagline = ""
summary = ""
announcement = ""
readme = { generate = true }

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
cfg-if = { version = "1" }
futures = { version = "0.3.31", optional = true }
tempfile = { version = "3", optional = true }
thiserror = { version = "2", default-features = false }

[dev-dependencies]
futures = "0.3"
pretty_assertions = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["macros", "fs", "net", "rt", "rt-multi-thread"] }
toml = "0.9"

[features]
default = ["std"]
std = ["tempfile", "thiserror/std"]
